--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,23 @@
-# Dependency directory
-node_modules
-bower_components
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Editors
-.idea
-*.iml
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# OS metadata
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Ignore built ts files
-dist/**/*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
